<?xml version="1.0" encoding="UTF-8"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.5</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>
	<groupId>com.souslesens</groupId>
	<artifactId>Jowl</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Jowl</name>
	<description>API REST for OWL Services</description>
	<properties>
		<java.version>17</java.version>
		<ontop.version>5.0.2</ontop.version>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <logback.version>1.2.9</logback.version>
        <h2.version>2.1.214</h2.version>
        <rdf4j.version>4.1.3</rdf4j.version>
    </properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-tomcat</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<!-- ontop dependencies -->
        <dependency>
            <groupId>it.unibz.inf.ontop</groupId>
            <artifactId>ontop-system-sql-owlapi</artifactId>
            <version>${ontop.version}</version>
        </dependency>

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
        </dependency>

        <dependency>
            <groupId>it.unibz.inf.ontop</groupId>
            <artifactId>ontop-rdf4j</artifactId>
            <version>${ontop.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-rdf-rdf4j</artifactId>
            <version>0.5.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-repository-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-repository-sail</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-util</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-turtle</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-ntriples</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-nquads</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-rdfxml</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-trig</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-rio-jsonld</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-sail-memory</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.eclipse.rdf4j</groupId>
                    <artifactId>rdf4j-repository-sail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-model</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-repository-api</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-repository-sail</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-api</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-turtle</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-n3</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-ntriples</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.eclipse.rdf4j</groupId>
            <artifactId>rdf4j-rio-rdfxml</artifactId>
            <version>${rdf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>
		<!-- OWLAPI dependency -->
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-distribution</artifactId>
			<version>4.5.20</version>
			    <exclusions>
        <exclusion>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
        </exclusion>
    </exclusions>
		</dependency>
		<dependency>
			<groupId>com.github.ansell.pellet</groupId>
			<artifactId>pellet-owlapiv3</artifactId>
			<version>2.3.2</version>
			    <exclusions>
        <exclusion>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
        </exclusion>
    </exclusions>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20210307</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.15.0-rc1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>apache-jena-libs</artifactId>
			<type>pom</type>
			<version>4.7.0</version>
		</dependency>
		<dependency>
    <groupId>javax.xml.bind</groupId>
    <artifactId>jaxb-api</artifactId>
    <version>2.3.1</version>
</dependency>
<dependency>
    <groupId>com.sun.xml.bind</groupId>
    <artifactId>jaxb-impl</artifactId>
    <version>2.3.1</version>
</dependency>
<dependency>
    <groupId>com.sun.xml.bind</groupId>
    <artifactId>jaxb-core</artifactId>
    <version>2.3.0.1</version>
</dependency>

	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--add-opens java.base/java.lang=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>

